# SoftwareQualitySimposium

./: .gitignore  CLAUDE.md  README.md  input.md
analysis/: coverage-precision-analysis.md  originality-analysis.md  repo-analysis.md  testbase-verification.md  trm-coverage-audit.md
drafts/: abstract-draft.md  abstract-final-v2.md  abstract-final.md  abstract-v3.md  abstract-v4.md  figure-improvements.md  final-status-report.md  presentation-summary-v3.md  presentation-summary.md  structure-improvements.md  verification-report.md
experiment-env/: CMakeLists.txt
experiment-env/compat/: StdAfx.h  sakura_compat.h  windows_compat.h
experiment-env/compat/sakura_core/convert/: convert_util.h
experiment-env/compat/sakura_core/parse/: CWordParse.h
experiment-env/compat/sakura_core/util/: format.h
experiment-env/src/: convert_wrapper.cpp  cwordparse_wrapper.cpp  format_wrapper.cpp
experiment-env/tests/: test-convert-additional.cpp  test-cwordparse-additional.cpp  test-format-additional.cpp  test-format-generated.cpp
experiments/: additional-analysis.md  evaluation-report.md  macos-build-report.md  sakura-v3_1-retrospective.md
generated-tests/: test-convert-generated.cpp  test-cwordparse-generated.cpp  traceability-matrix.md
knowledge/: README.md  additional-references.md  architecture-diagram.md  candidate-repositories.md  complex-scope-approaches.md  direction.md  literature-review.md  operation-guide.md  paper-draft-full.md  paper-draft-outline.md  paper-experiment-section.md  paper-figures-plan.md  revised-framing.md  survey-deployment-plan.md  survey-design.md  trm-evaluation-criteria.md
report/: presentation_2026.pptx  submission_2026.docx  submission_final_2026.docx  submission_v3_2026.docx  submission_v4_2026.docx  submission_v5_2026.docx  submission_v6_2026.docx  toukou_form_template_2026.docx  ~$bmission_v4_2026.docx  静的解析に基づく悦と要求モデルの生成.docx
scripts/: README_create_survey_form.md  classify_readability.py  create_survey_form.gs  functional_categories.py  generate_figures.py  generate_figures_v2.py  generate_presentation.py  generate_submission.py  generate_submission_final.py  generate_submission_final_v2.py  generate_submission_final_v3.py  generate_submission_v3.py  generate_submission_v4.py  generate_submission_v5.py  generate_submission_v6.py  generate_survey_images.py  generate_visualization_pdf.py  generate_visualization_showcase_pdf.py  (+1 more)
(+74 files in other folders)
